--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
         padding: 5px;
         display: grid;
         grid-template-rows: 7, 7;
-        grid-auto-columns: 96px;
-        grid-auto-rows: 48px;
+        grid-auto-columns: 80px;
+        grid-auto-rows: 38px;
         width: min-content;
+      }
+      input {
+        font-size: 12px;
       }
   </style>
   </head>
@@ -44,7 +47,7 @@
 </div>
 <div>
     <div id="gridDisplay">
-        <canvas id="canvas2" width="528px" height="528px"></canvas>
+        <canvas id="canvas2" width="device-width" height="device-width"></canvas>
         <div style="grid-row: 1; grid-column: 2;" id = "StatBox"></div>
     </div>
     <div id="gridButton">
@@ -75,6 +78,15 @@
     canvas.height = 24 * h;
     const ctx = canvas.getContext('2d');
     const ctx2 = canvas2.getContext('2d');
+
+    function resize() {
+        const m = Math.min(window.innerHeight - 120, window.innerWidth - 230);
+        canvas2.width = m;
+        canvas2.height = m;
+        drawEverything(you.position);
+    }
+
+    window.onresize = resize;
 
     function randomElement(array) {
         return array[Math.floor(Math.random() * array.length)];
@@ -927,6 +939,8 @@
         ctx2.clearRect(0, 0, canvas2.width, canvas2.height);
         ctx2.drawImage(canvas, 0, 0, canvas2.width, canvas2.height)
     }
+
+    resize();
     //alert('Your goal is to escape the hotel. Watch out for the entities!');
     setTimeout(doStuff, 500);
     
