organization and support multiple maps

--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@
             }
         }) */
     ];
-    //alert('Escape the hotel. Beware the entities!');
+    alert('Escape the hotel. Beware the entities!');
     resize();
     game.loadMap(spriteList, 'doors');
     //setTimeout(game.doStuff, 500);
